[gd_scene load_steps=10 format=3 uid="uid://bqv22p58k73pd"]

[ext_resource type="Script" path="res://player/player_character.gd" id="1_jsxkw"]
[ext_resource type="PackedScene" uid="uid://ivoq3jp5vith" path="res://assets/claire_pawn.glb" id="2_pnju7"]
[ext_resource type="Script" path="res://player/attributes.gd" id="3_5klw4"]
[ext_resource type="Script" path="res://player/effects/effects.gd" id="4_5o3fu"]
[ext_resource type="Script" path="res://player/UI.gd" id="4_uebbd"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_343o7"]
height = 1.65

[sub_resource type="BoxMesh" id="BoxMesh_qt0gw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tf42a"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jm0xf"]

[node name="player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_jsxkw")

[node name="meshControl" type="Node3D" parent="."]

[node name="claire_pawn" parent="meshControl" instance=ExtResource("2_pnju7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0262589, 0)

[node name="playermesh" type="MeshInstance3D" parent="meshControl"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.83116, 0)
visible = false
transparency = 0.17
mesh = SubResource("CapsuleMesh_343o7")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="meshControl/playermesh"]
transform = Transform3D(1, 0, 0, 0, 0.3, 0, 0, 0, 0.40904, 0, 0.25177, -0.391049)
mesh = SubResource("BoxMesh_qt0gw")

[node name="env collide" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_tf42a")

[node name="cameraOrbit" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.58731, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="cameraOrbit"]
shape = SubResource("SphereShape3D_jm0xf")
spring_length = 6.0
margin = 1.0

[node name="Camera3D" type="Camera3D" parent="cameraOrbit/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.45564)
current = true
fov = 88.1

[node name="attributes" type="Node" parent="."]
script = ExtResource("3_5klw4")
resistances = null
strength = null
dexterity = null
constitution = null
inteligence = null
wisdom = null
charisma = null
level = null
speed = null

[node name="effects" type="Node" parent="attributes"]
script = ExtResource("4_5o3fu")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.997
offset_bottom = -0.0560303
script = ExtResource("4_uebbd")

[node name="hp" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = 37.0
offset_top = 14.0
offset_right = 287.0
offset_bottom = 41.0

[node name="debug hp" type="RichTextLabel" parent="UI/hp"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 13.0
offset_top = -1.0
offset_right = 60.0
offset_bottom = 27.0
grow_horizontal = 0
text = "111"

[node name="effect sprite" type="HBoxContainer" parent="UI/hp"]
clip_contents = true
layout_mode = 0
offset_top = 29.0
offset_right = 247.0
offset_bottom = 50.0
theme_override_constants/separation = 1

[connection signal="attribute_changed" from="attributes" to="attributes" method="_on_attribute_changed"]
[connection signal="attribute_changed" from="attributes" to="UI" method="_on_attributes_attribute_changed"]
[connection signal="effect_added" from="attributes" to="attributes" method="_on_effect_added"]
[connection signal="effect_added" from="attributes" to="UI" method="_on_attributes_effect_added"]
[connection signal="effect_removed" from="attributes" to="UI" method="_on_attributes_effect_removed"]
